@@ -70,6 +70,10 @@ checkFunc<- function (Func2, times, y, rho) {
     ## Call func once to figure out whether and how many "global"
     ## results it wants to return and some other safety checks
     tmp <- eval(Func2(times[1], y), rho)
+    ## patch provided by Ben Bolker to check naming
+    if (!all(names(tmp[[1]]) == names(y)))
+      warning('name mismatch between y and return value of func()')
+
     if (!is.list(tmp))
       stop("Model function must return a list\n")
     if (length(tmp[[1]]) != length(y))
@@ -77,13 +81,14 @@ checkFunc<- function (Func2, times, y, rho) {
                  length(tmp[[1]]),
                  ") must equal the length of the initial conditions vector (",
                  length(y), ")", sep = ""))
-    # use "unlist" here because some output variables are vectors/arrays
+    ## use "unlist" here because some output variables are vectors/arrays
     Nglobal <- if (length(tmp) > 1)
       length(unlist(tmp[-1]))  else 0
-    # Karline: changed this: Nmtot is now a list with names, dimensions,... for 1-D, 2-D vars
-    Nmtot <- list()  
+    ## Karline: changed this:
+    ##  Nmtot is now a list with names, dimensions,... for 1-D, 2-D vars
+    Nmtot <- list()
     Nmtot$colnames <- attr(unlist(tmp[-1]), "names")
-    
+
     Nmtot$lengthvar <- unlist(lapply(tmp, length))
     if (length(Nmtot$lengthvar) < Nglobal+1){
       Nmtot$dimvar <- lapply(tmp[-1], dim)
@@ -185,7 +190,7 @@ checkDLL <- function (func, jacfunc, dllname,
     if (length(outnames) > nout)
       Nmtot$colnames <- outnames[1:nout] else
     Nmtot$colnames <- c(outnames,(length(outnames)+1):nout)
-    
+
     cnames <- outnames
     unames <- unique(outnames)
     if (length(cnames) > length(unames))
@@ -258,15 +263,15 @@ saveOut <- function (out, y, n, Nglobal, Nmtot, func, Func2,
   attr(out,"istate") <- istate
   attr(out, "rstate") <- rstate
   if (! is.null(Nmtot$lengthvar))
-    if (is.na(Nmtot$lengthvar[1]))Nmtot$lengthvar[1] <- length(y) 
+    if (is.na(Nmtot$lengthvar[1]))Nmtot$lengthvar[1] <- length(y)
   attr(out, "lengthvar") <- Nmtot$lengthvar
   if (! is.null(troot)) attr(out, "troot") <-  troot
   if (! is.null(valroot)) attr(out, "valroot") <- matrix(nrow = n, valroot)
   if (! is.null(indroot)) attr(out, "indroot") <- indroot
 
-  ii <- if (is.null(Nmtot$dimvar)) 
+  ii <- if (is.null(Nmtot$dimvar))
     NULL else !(unlist(lapply(Nmtot$dimvar, is.null))) # variables with dimension
-  if (sum(ii) >0) 
+  if (sum(ii) >0)
     attr(out, "dimvar") <- Nmtot$dimvar[ii]     # dimensions that are not null
   class(out) <- c("deSolve", "matrix")          # a differential equation
   dimnames(out) <- list(nm, NULL)
@@ -285,7 +290,7 @@ saveOutrk <- function(out, y, n, Nglobal, Nmtot, iin, iout, transpose = FALSE)  
   ## Global outputs
   if (Nglobal > 0) {
     nm  <- c(nm,
-      if (!is.null(Nmtot$colnames)) 
+      if (!is.null(Nmtot$colnames))
         Nmtot$colnames else as.character((n + 1) : (n + Nglobal))
     )
   }
@@ -297,10 +302,10 @@ saveOutrk <- function(out, y, n, Nglobal, Nmtot, iin, iout, transpose = FALSE)  
   if (! is.null(Nmtot$lengthvar))
     if (is.na(Nmtot$lengthvar[1])) Nmtot$lengthvar[1] <- length(y)
   attr(out, "lengthvar") <- Nmtot$lengthvar
-  
-  ii <- if (is.null(Nmtot$dimvar)) 
+
+  ii <- if (is.null(Nmtot$dimvar))
     NULL else !(unlist(lapply(Nmtot$dimvar, is.null))) # variables with dimension
-  if (sum(ii) >0) 
+  if (sum(ii) >0)
     attr(out, "dimvar") <- Nmtot$dimvar[ii] # only those which are not null
   class(out) <- c("deSolve", "matrix")      # output of a differential equation
   if (transpose)
